# jekko-jnoccio

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md
.github/workflows/: jankurai.yml
agent/: audit-policy.toml  boundaries.toml  owner-map.json  repo-score.json  repo-score.md  test-map.json
crates/domain/: AGENTS.md  observability.md
crates/jekko-jnoccio-boot/: Cargo.toml
crates/jekko-jnoccio-boot/src/: fusion_root.rs  health.rs  lib.rs  poller.rs  secret_unlock.rs  spawn.rs  unlock.rs
crates/zyal-core/: Cargo.toml
crates/zyal-core/src/: artifact_kinds.rs  credential_policy.rs  forbidden.rs  lane.rs  lib.rs  memory.rs  super_reasoning.rs
crates/zyal-key-pool/: Cargo.toml
crates/zyal-key-pool/src/: balancer.rs  budget.rs  lib.rs  pool.rs
db/: AGENTS.md  README.md
db/constraints/: README.md
db/migrations/: README.md
docs/: architecture.md  boundaries.md  release.md  testing.md
jnoccio-fusion/: .env.jnoccio.example  .gitignore  Cargo.toml  KEYS.md  README.md
jnoccio-fusion/agents/claude/: .mcp.json  CLAUDE.md
jnoccio-fusion/agents/codex/: AGENTS.md  config.toml.snippet
jnoccio-fusion/config/: models.json  models.schema.json  server.json
jnoccio-fusion/jekko/: jekko.jnoccio.jsonc
jnoccio-fusion/scripts/: install-jekko-config.sh  smoke.sh
jnoccio-fusion/src/: capacity.rs  cli.rs  config.rs  failure_log.rs  fusion.rs  lib.rs  limits.rs  main.rs  mcp.rs  metrics.rs  openai.rs  providers.rs  quality_band.rs  router.rs  routing.rs  rpc_shim.rs  search.rs  state.rs  telemetry.rs
jnoccio-fusion/src/providers/: cloudflare_workers.rs  completion_common.rs  openai_compatible.rs  responses.rs  responses_body.rs
jnoccio-fusion/src/state/: state_core.rs  state_limits.rs  state_outcomes.rs  state_recording.rs  state_tests.rs  state_util.rs
jnoccio-fusion/tests/: embeddings.rs  mcp.rs  openai_contract.rs
ops/ci/: security.sh
schemas/: repair-queue.schema.json
src/: lib.rs
tests/: identity.rs
