[workspace]
resolver = "2"
members = [
  "crates/jekko-jnoccio-boot",
  "crates/agent-search",
  "crates/zyal-core",
  "crates/zyal-key-pool",
  "jnoccio-fusion",
]

[workspace.package]
edition = "2021"
version = "2.0.6"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
